Next
====
 - #154: Support getting geometry from selected features when (mappedonly=1)
 - #153: Support for select features on layer definition (for HTML/GeoJSON formats):
    - Using only properties mapped to display values
       - Specifying geometry to be included as well
    - Using display names from property mappings

1.0 RC5
=======
 - #137: Verify PHP 5.6 (bundled with MGOS 3.1) compatibility
 - #132: Ensure scale ranges are outputted for raster/drawing layers
 - #145: Fix typo in utils.php
 - #144: Ensure newlines are escaped when converting XML to JSON
 - #135: Use OSM/Stamen instead of Bing Maps in all Cesium examples
 - #142, #146: Use a more roundtrip-friendly date format when serializing MgDateTime instances to GeoJSON
 - #140: Add DPI parameter for DWF/PDF plotting (though this has no effect for DWF plots, TBD which side (MapGuide or mapguide-rest) this bug is on)
 - #102: Fix boolean feature property serialization for GeoJSON
 - Updated swagger UI to v2.2.2
 - Updated ol3-cesium in sample apps to 1.21
    - Cesium 1.27
    - OpenLayers 3.19.1

1.0 RC4
=======
 - username/password as POST parameters supported for:
    - /session.{type}
    - /services/createmap.{type}
 - #115: Added Layer/Group/Selection mutation APIs with new sample app demonstrating these APIs
 - #118: Disable anon access to CreateRuntimeMap
 - #119: Added selection overview route
 - #123: Updated Swagger UI and API spec file. Where possible, input and output model schemas are included.
 - #124: Add missing JSON support for various /coordsys APIs
 - #125: Added CORS support
 - #122: Implicit XML routes have been removed
 - Refactored file-locking (used in XYZ tile caching) to be more object-oriented
 - Updated ol3-cesium to 1.11
    - Cesium 1.16
    - OpenLayers 3.12.1
 - Fix Vector Tile example

1.0 RC3
=======
 - #111: Whitelisting expanded to cover Resource Service operations
   - Defined ACLs can now be inherited