@@ -39,19 +39,19 @@ class RestCapabilities
      * @var boolean
      */
     public $AllowInsert;
-    
+
     /**
      * @SWG\Property(description="Allow deletes on this feature source")
      * @var boolean
      */
     public $AllowDelete;
-    
+
     /**
      * @SWG\Property(description="Allow updates on this feature source")
      * @var boolean
      */
     public $AllowUpdate;
-    
+
     /**
      * @SWG\Property(description="Use transactions for inserts/updates/deletes. The feature source must support transactions for this to have any effect")
      * @var boolean
@@ -81,12 +81,54 @@ class PrimitiveValue
      * @var string
      */
     public $Type;
-    
+
     /**
      * @SWG\Property(description="The underlying value")
      * @var string
      */
     public $Value;
+}
+
+/**
+ * @SWG\Definition(@SWG\Xml(name="BufferOperation"))
+ */
+class BufferOperation
+{
+    /**
+     * @SWG\Property(description="The geometry WKT")
+     * @var string
+     */
+    public $Geometry;
+
+    /**
+     * @SWG\Property(description="The coordinate system code of the input geometry")
+     * @var string
+     */
+    public $CoordSys;
+
+    /**
+     * @SWG\Property(description="The distance to buffer")
+     * @var number
+     */
+    public $Distance;
+
+    /**
+     * @SWG\Property(description="The desired output format of the buffered geometry. wkt or geojson")
+     * @var string
+     */
+    public $Format;
+
+    /**
+     * @SWG\Property(description="The distance units. If not specified it will be assumed to be meters")
+     * @var string
+     */
+    public $Units;
+
+    /**
+     * @SWG\Property(description="The coordinate system code to transform the buffered geometry to")
+     * @var string
+     */
+    public $TransformTo;
 }
 
 /**
@@ -111,13 +153,13 @@ class FeatureSourceParams
      * @var FeatureSourceFile
      */
     public $File;
-    
+
     /**
      * @SWG\Property()
      * @var FeatureSourceSpatialContext
      */
     public $SpatialContext;
-    
+
     /**
      * @SWG\Property()
      * @var FeatureSourceSchema
@@ -135,7 +177,7 @@ class FeatureSourceFile
      * @var string
      */
     public $Provider;
-    
+
     /**
      * @SWG\Property(description="The file name")
      * @var string
@@ -153,7 +195,7 @@ class SchemaElement
      * @var string
      */
     public $Name;
-    
+
     /**
      * @SWG\Property()
      * @var string
@@ -165,19 +207,19 @@ class SchemaElement
  * @SWG\Definition(@SWG\Xml(name="FeatureSourceSpatialContext"))
  */
 class FeatureSourceSpatialContext extends SchemaElement
-{  
+{
     /**
      * @SWG\Property()
      * @var string
      */
     public $CoordinateSystem;
-    
+
     /**
      * @SWG\Property()
      * @var double
      */
     public $XYTolerance;
-    
+
     /**
      * @SWG\Property()
      * @var double
@@ -207,7 +249,7 @@ class ClassDefinition extends SchemaElement
      * @var PropertyDefinition[]
      */
     public $PropertyDefinition;
-    
+
     /**
      * @SWG\Property(description="The name of the default geometry property. This must exist int the PropertyDefinition collection")
      * @var string
@@ -237,61 +279,61 @@ class PropertyDefinition extends SchemaElement
      * @var int
      */
     public $DataType;
-    
+
     /**
      * @SWG\Property()
      * @var boolean
      */
     public $Nullable;
-    
+
     /**
      * @SWG\Property()
      * @var boolean
      */
     public $IsAutoGenerated;
-    
+
     /**
      * @SWG\Property()
      * @var string
      */
     public $DefaultValue;
-    
+
     /**
      * @SWG\Property()
      * @var int
      */
     public $Length;
-    
+
     /**
      * @SWG\Property()
      * @var int
      */
     public $Precision;
-    
+
     /**
      * @SWG\Property()
      * @var int
      */
     public $Scale;
-    
+
     /**
      * @SWG\Property()
      * @var int
      */
     public $GeometryType;
-    
+
     /**
      * @SWG\Property()
      * @var boolean
      */
     public $HasElevation;
-    
+
     /**
      * @SWG\Property()
      * @var string
      */
     public $SpatialContextAssociation;
-    
+
     /**
      * @SWG\Property()
      * @var boolean
@@ -357,7 +399,7 @@ class NameValuePair
      * @var string
      */
     public $Name;
-    
+
     /**
      * @SWG\Property()
      * @var string
@@ -387,7 +429,7 @@ class UpdateOperation
      * @var string
      */
     public $Filter;
-    
+
     /**
      * @SWG\Property()
      * @var FeatureToInsert
